[package]
name = "pane"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["game-development", "gui", "multimedia", "multimedia::video"]
keywords = ["window"]
description = "A very basic windowing library."
repository = "https://github.com/wutterfly/pane.git"

[dependencies]
log = { version = "0.4.27"}


[target.'cfg(target_os = "linux")'.dependencies.x11rb]
version = "0.13.0"
default-features = false
features = ["allow-unsafe-code"]


[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Media",
]
